--- a/frontend/heladeria/package.json
+++ b/frontend/heladeria/package.json
@@ -17,10 +17,13 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@iconify/svelte": "^5.0.0-beta.1",
+    "@iconify/vue": "^5.0.0-beta.3",
     "axios": "^1.13.0",
     "pinia": "^3.0.3",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vuetify": "^3.10.11"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -38,6 +41,8 @@
     "jsdom": "^27.0.0",
     "npm-run-all2": "^8.0.4",
     "prettier": "3.6.2",
+    "sass": "^1.94.2",
+    "sass-loader": "^13.3.3",
     "typescript": "~5.9.0",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2",
